# crazyswarm2-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  colcon.pkg  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  setup.cfg  setup.py  tracks.yaml
.github/workflows/: ci-ros2.yml
crazyflie/: CHANGELOG.rst  CMakeLists.txt  package.xml
crazyflie/launch/: launch.py
crazyflie_description/: CHANGELOG.rst
crazyflie_examples/: package.xml  setup.cfg  vel_mux.py
crazyflie_examples/crazyflie_examples/: simple_mapper_multiranger.py
crazyflie_examples/launch/: keyboard_velmux_launch.py  multiranger_mapping_launch.py  multiranger_simple_mapper_launch.py
crazyflie_interfaces/: package.xml
crazyflie_py/: CHANGELOG.rst  package.xml
crazyflie_py/crazyflie_py/: crazyflie.py
crazyflie_py/test/: test_import.py
crazyflie_server_py/: CHANGELOG.rst  package.xml  setup.py
crazyflie_server_py/crazyflie_server_py/: crazyflie_server.py
crazyflie_sim/: CHANGELOG.rst  package.xml
debian/: changelog  control  copyright  gbp.conf  rules
docs2/: installation.rst
launch/: launch.py  multiranger_nav2_launch.py
rpm/: ros-humble-crazyflie-description.spec  ros-humble-crazyflie-examples.spec  ros-humble-crazyflie-interfaces.spec  ros-humble-crazyflie-py.spec  ros-humble-crazyflie-server-py.spec  ros-humble-crazyflie-sim.spec  ros-humble-crazyflie.spec  ros-jazzy-crazyflie-description.spec  ros-jazzy-crazyflie-examples.spec  ros-jazzy-crazyflie-interfaces.spec  ros-jazzy-crazyflie-py.spec  ros-jazzy-crazyflie-server-py.spec  ros-jazzy-crazyflie-sim.spec  ros-jazzy-crazyflie.spec  ros-lyrical-crazyflie-interfaces.spec  ros-lyrical-crazyflie-server-py.spec  ros-lyrical-crazyflie-sim.spec  ros-lyrical-crazyflie.spec  ros-rolling-crazyflie-description.spec  ros-rolling-crazyflie-examples.spec  ros-rolling-crazyflie-interfaces.spec  ros-rolling-crazyflie-py.spec  ros-rolling-crazyflie-server-py.spec  ros-rolling-crazyflie-sim.spec  ros-rolling-crazyflie.spec  template.spec
src/: crazyflie_server.cpp
urdf/: crazyflie_description.urdf
